--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 plugins {
     id 'java'
     id 'application'
+	id "org.openjfx.javafxplugin" version "0.0.8"
 }
 
 repositories {
@@ -12,7 +13,17 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    compile group: 'org.openjfx', name: 'javafx-graphics', version: '11.0.2'
+    compile group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
+	implementation 'com.google.guava:guava:27.0.1-jre'
     testImplementation 'junit:junit:4.12'
+}
+
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 sourceSets {
