--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    //testImplementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
 }
 
 sourceSets {
